changes of structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple adventures</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -11,100 +11,100 @@
 </head>
 <body>
     <div class="container"> 
-    	<div class="row">
-    		<nav class="header col-12 col-s-12 ">
-				<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/pas4.png" alt="logo" class="logo"> 
-    			<ul> 
-    				<li class="button"><a href="#"> O MNIE </a>
-					</li> 
-    				<li class="button"><a href="#"> PORTFOLIO GRAFICZNE </a>
-					</li> 
-    				<li class="button"><a href="#"> PORTFOLIO FRONT-END </a>
+        <div class="row">
+            <nav class="header col-12 col-s-12 ">
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/pas4.png" alt="logo" class="logo"> 
+                <ul> 
+                    <li class="button"><a href="#"> O MNIE </a>
+                    </li> 
+                    <li class="button"><a href="#"> PORTFOLIO GRAFICZNE </a>
+                    </li> 
+                    <li class="button"><a href="#"> PORTFOLIO FRONT-END </a>
                     </li>
                     <li class="button"><a href="#"> KONTAKT </a>
-					</li> 
-    			</ul>
-    		</nav>
-    	</div>
-    	<div class="row">
-    		<section class="hero col-12 col-s-12">
-    			<div class="slogan">
-    				<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/LOGO_PORTFOLIO.png" alt="logo2" class="logo2">
-                </div>
-    		</section>
-    	</div>
-    	<div class="row">
-        	<div class="guide">
-        		<h2 class="about-me"><p> O MNIE </p></h2>
-                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p>
-           	</div>
+                    </li> 
+                </ul>
+            </nav>
         </div>
         <div class="row">
-    		<div class="gallery col-12 col-s-12">
-    			<h2 class="graphic"><p> PORTFOLIO GRAFICZNE </p></h2>
-      		</div>
-    	</div>
-    	<div class="row row-1">
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/bike.JPG" class="first" alt="obraz1">
-    		</div>
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/ella.jpg" alt="obraz2">
-    		</div>
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/pop.jpg" alt="obraz3">
-    		</div>
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/lindt.JPG" alt="obraz4">
-        	</div>
-    	</div>
-    	<div class="row row-2">
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/clue.JPG" alt="obraz5">
-    		</div>
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/biedronka.jpg" alt="obraz6">
-    		</div>
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/masaz.jpg" alt="obraz7">
-    		</div>
-    		<div class="photos col-3">
-    			<div class="layer"> 
-    				<i class="fa fa-camera-retro fa-lg"></i>
-    				<i class="fa fa-link fa-lg"></i> 
-    			</div>
-    			<img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/pomorskie.jpg" alt="obraz8">
-        	</div>
-    	</div>
-    	<div class="row">
+            <section class="hero col-12 col-s-12">
+                <div class="slogan">
+                    <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/LOGO_PORTFOLIO.png" alt="logo2" class="logo2">
+                </div>
+            </section>
+        </div>
+        <div class="row">
+            <div class="guide">
+                <h2 class="about-me"><p> O MNIE </p></h2>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="gallery col-12 col-s-12">
+                <h2 class="graphic"><p> PORTFOLIO GRAFICZNE </p></h2>
+            </div>
+        </div>
+        <div class="row row-1">
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/bike.JPG" class="first" alt="obraz1">
+            </div>
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/ella.jpg" alt="obraz2">
+            </div>
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/pop.jpg" alt="obraz3">
+            </div>
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/lindt.JPG" alt="obraz4">
+            </div>
+        </div>
+        <div class="row row-2">
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/clue.JPG" alt="obraz5">
+            </div>
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/biedronka.jpg" alt="obraz6">
+            </div>
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/masaz.jpg" alt="obraz7">
+            </div>
+            <div class="photos col-3">
+                <div class="layer"> 
+                    <i class="fa fa-camera-retro fa-lg"></i>
+                    <i class="fa fa-link fa-lg"></i> 
+                </div>
+                <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/pomorskie.jpg" alt="obraz8">
+            </div>
+        </div>
+        <div class="row">
             <div class="gallery col-12 col-s-12">
                 <h2 class="front-end"><p> PORTFOLIO FRONT-END </p></h2>
             </div>
@@ -117,14 +117,14 @@
                 </div>
                 <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/www3.jpg" alt="obraz8">
             </div>
-        	<div class="photos col-3">
+            <div class="photos col-3">
                 <div class="layer"> 
                     <i class="fa fa-camera-retro fa-lg"></i>
                     <i class="fa fa-link fa-lg"></i> 
                 </div>
                 <img src="http://slawekrawicz.home.pl/ftp/pinkrabbit/WWW/PORTFOLIO/www2.jpg" alt="obraz8">
             </div>
-        	<div class="photos col-3">
+            <div class="photos col-3">
                 <div class="layer"> 
                     <i class="fa fa-camera-retro fa-lg"></i>
                     <i class="fa fa-link fa-lg"></i> 
@@ -133,34 +133,35 @@
             </div>
         </div>
         <div class="row picture4">
-    		<div class="info col-12">
-    			<h3>INFORMACJE</h3> <p>Lorem ipsum dolor sit amet.<br> 
+            <div class="info col-12">
+                <h3>INFORMACJE</h3> <p>Lorem ipsum dolor sit amet.<br> 
     			Consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    		</div>
-    	</div>
-    	</div>
-    	<div class="row">
-        	<div class="footer col-6">
-        		<h4>KONTAKT</h4><p>Lorem ipsum dolor sit amet<br>consectetur adipiscing elit<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> 
-    		</div>
-        	<div class="footer col-6">
-        		<h4>MEDIA SPOŁECZNOŚCIOWE</h4>
-                    <button class="icon-btn facebook"><a href="https://facebook.com"></a>
-                        <i class="fa fa-facebook"></i>
-                    </button>
-                    <button class="icon-btn github"><a href="https://github.com/KarolinaSze"></a>
-                        <i class="fa fa-github"></i>
-                    </button>
-        	</div>
-    	</div>
-    	<div class="row">
-    		<div class="footer2 col-12">
-    			<p> ©2017 All Rights Reserved </p>
-    		</div>
-    	</div>
+            </div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="footer col-6">
+                <h4>KONTAKT</h4>
+                    <p>Lorem ipsum dolor sit amet<br>consectetur adipiscing elit<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> 
+            </div>
+            <div class="footer col-6">
+                <h4>MEDIA SPOŁECZNOŚCIOWE</h4>
+                <button class="icon-btn facebook"><a href="https://facebook.com"></a>
+                    <i class="fa fa-facebook"></i>
+                </button>
+                <button class="icon-btn github"><a href="https://github.com/KarolinaSze"></a>
+                    <i class="fa fa-github"></i>
+                </button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="footer2 col-12">
+                <p> ©2017 All Rights Reserved </p>
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="scripts.js"></script> 
+    <script type="text/javascript" src="script.js"></script> 
 </body>
 </html>
